--- a/action.yml
+++ b/action.yml
@@ -18,10 +18,10 @@ inputs:
     description: 'notification message'
     required: false
   footer:
-    description: 'notification footer',
+    description: 'notification footer'
     required: true
   footer_icon:
-    description: 'notification footer icon',
+    description: 'notification footer icon'
     required: false
   field_generator:
     description: 'fields generator'
