--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
   "license": "MIT",
   "dependencies": {
     "@actions/core": "^1.0.0",
-    "@actions/github": "^1.1.0"
+    "@actions/github": "^1.1.0",
+    "@slack/webhook": "^5.0.2"
   },
   "devDependencies": {
     "@types/jest": "^24.0.13",
