--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
   "dependencies": {
     "@actions/core": "^1.0.0",
     "@actions/github": "^1.1.0",
-    "@slack/webhook": "^5.0.2"
+    "@slack/webhook": "^5.0.2",
+    "humanize-duration-ts": "^2.0.0"
   },
   "devDependencies": {
     "@types/jest": "^24.0.13",
